--- a/src/rds_control/package.xml
+++ b/src/rds_control/package.xml
@@ -16,6 +16,7 @@
   <depend>autoware_auto_vehicle_msgs</depend>
   <depend>rclcpp</depend>
   <depend>sensor_msgs</depend>
+  <depend>rds_msgs</depend>
 
   <export>
     <build_type>ament_cmake</build_type>
