--- a/src/rds_hw_interfaces/package.xml
+++ b/src/rds_hw_interfaces/package.xml
@@ -11,6 +11,12 @@
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
+  <depend>rclcpp</depend>
+  <depend>sensor_msgs</depend>
+  <depend>rds_msgs</depend>
+  <depend>serial</depend>
+
+
 
   <export>
     <build_type>ament_cmake</build_type>
