--- a/src/rds_hud/package.xml
+++ b/src/rds_hud/package.xml
@@ -12,6 +12,10 @@
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
   <depend>autoware_auto_msgs</depend>
+  <depend>cv_brigde</depend>
+  <depend>sensor_msgs</depend>
+  <depend>image_transport</depend>
+  <depend>rclcpp</depend>
 
   <export>
     <build_type>ament_cmake</build_type>
