--- a/src/rds_gui/package.xml
+++ b/src/rds_gui/package.xml
@@ -13,6 +13,7 @@
   <test_depend>ament_lint_common</test_depend>
   <depend>autoware_auto_control_msgs</depend>
   <depend>autoware_auto_vehicle_msgs</depend>
+  <depend>rds_msgs</depend>
 
 
   <depend>qt_build</depend>
