--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "src/external_pkgs/autoware_auto_msgs"]
 	path = src/external_pkgs/autoware_auto_msgs
 	url = https://github.com/tier4/autoware_auto_msgs.git
+[submodule "src/external_pkgs/mapCreator"]
+	path = src/external_pkgs/mapCreator
+	url = https://github.com/sjev/mapCreator.git
