--- a/src/rds_hud/package.xml
+++ b/src/rds_hud/package.xml
@@ -17,6 +17,8 @@
   <depend>image_transport</depend>
   <depend>rclcpp</depend>
   <depend>rds_mgs</depend>
+  <depend>std_msgs</depend>
+  <depend>amment_index_cpp</depend>
 
   <export>
     <build_type>ament_cmake</build_type>
