--- a/src/rover_sounds/CMakeLists.txt
+++ b/src/rover_sounds/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.8)
-project(rds_hud)
+project(rover_sounds)
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
@@ -7,32 +7,30 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
+find_package(ament_index_cpp REQUIRED)
 find_package(rclcpp REQUIRED)
-find_package(cv_bridge REQUIRED)
-find_package(image_transport REQUIRED)
-find_package(rds_msgs REQUIRED)
 find_package(std_msgs REQUIRED)
-find_package(OpenCV REQUIRED)
-
-
+# Find SFML shared libraries
+find_package(SFML 2.5 COMPONENTS system audio REQUIRED)
 # uncomment the following section in order to fill in
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
-include_directories(include) 
+include_directories(include sounds)  # Include the OpenCV header files
 
 
-add_executable(hud_node src/heads_up_node.cpp include/heads_up_node.h include/heads_up_definitions.h)
-ament_target_dependencies(hud_node rclcpp image_transport cv_bridge rds_msgs ament_index_cpp std_msgs)
-target_link_libraries(hud_node ${OpenCV_LIBS} sfml-system sfml-audio)  # Link against the OpenCV libraries
+add_executable(speaker_node src/speaker_node.cpp include/speaker_node.h)
+ament_target_dependencies(speaker_node rclcpp ament_index_cpp std_msgs)
+target_link_libraries(speaker_node sfml-system sfml-audio)  # Link against the OpenCV libraries
 install(TARGETS
-hud_node
+speaker_node
 DESTINATION lib/${PROJECT_NAME}
 )
 install(
-  DIRECTORY
-    launch/
-  DESTINATION share/${PROJECT_NAME}/launch
+  DIRECTORY 
+    sounds/
+  DESTINATION share/${PROJECT_NAME}/sounds
 )
+
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
