lots of progress

--- a/src/rds_hud/CMakeLists.txt
+++ b/src/rds_hud/CMakeLists.txt
@@ -40,6 +40,12 @@ install(
     videos/
   DESTINATION share/${PROJECT_NAME}/videos
 )
+install(
+  DIRECTORY 
+    images/
+  DESTINATION share/${PROJECT_NAME}/images
+)
+
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
