--- a/src/rds_control/package.xml
+++ b/src/rds_control/package.xml
@@ -12,8 +12,8 @@
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
-  <depend>autoware_auto_control_msgs</depend>
-  <depend>autoware_auto_vehicle_msgs</depend>
+  <!-- <depend>autoware_auto_control_msgs</depend> -->
+  <!-- <depend>autoware_auto_vehicle_msgs</depend> -->
   <depend>rclcpp</depend>
   <depend>sensor_msgs</depend>
   <depend>rds_msgs</depend>
