--- a/src/rds_control/CMakeLists.txt
+++ b/src/rds_control/CMakeLists.txt
@@ -10,16 +10,16 @@ find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(joy REQUIRED)
 find_package(rds_msgs REQUIRED)
-find_package(autoware_auto_vehicle_msgs REQUIRED)
-find_package(autoware_auto_control_msgs REQUIRED)
+#find_package(autoware_auto_vehicle_msgs REQUIRED)
+#find_package(autoware_auto_control_msgs REQUIRED)
 
 # uncomment the following section in order to fill in
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
 include_directories(include/)
 
-add_executable(g29_control src/g29_control.cpp include/g29_control.h)
-ament_target_dependencies(g29_control rclcpp autoware_auto_control_msgs autoware_auto_vehicle_msgs joy)
+#add_executable(g29_control src/g29_control.cpp include/g29_control.h)
+#ament_target_dependencies(g29_control rclcpp autoware_auto_control_msgs autoware_auto_vehicle_msgs joy)
 
 add_executable(g29_hw_control src/g29_hw_control.cpp include/g29_control.h)
 ament_target_dependencies(g29_hw_control rclcpp rds_msgs joy)
@@ -35,7 +35,7 @@ install(
 
 install(
   TARGETS 
-  g29_control
+ # g29_control
   g29_hw_control
   DESTINATION lib/${PROJECT_NAME}
 )
