--- a/src/rds_launchers/CMakeLists.txt
+++ b/src/rds_launchers/CMakeLists.txt
@@ -28,5 +28,10 @@ install(
     launch/
   DESTINATION share/${PROJECT_NAME}/launch
 )
+install(
+  DIRECTORY
+    config/
+  DESTINATION share/${PROJECT_NAME}/config
+)
 
 ament_package()
