--- a/src/rds_launchers/config/front_cam_params.yaml
+++ b/src/rds_launchers/config/front_cam_params.yaml
@@ -4,13 +4,13 @@ Brightness: 0.0
 Contrast: 1.0
 ExposureTime: 15700
 Saturation: 1.0
-camera: \_SB_.PCI0.XHC_.RHUB.HS02-2:1.0-05a3:9230
+camera: \_SB_.PCI0.XHC_.RHUB.HS02-2:1.0-4c4a:4a55
 format: MJPEG
 height: 1080
-qos_overrides./parameter_events.publisher.depth: 1000
+qos_overrides./parameter_events.publisher.depth: 10
 qos_overrides./parameter_events.publisher.durability: volatile
 qos_overrides./parameter_events.publisher.history: keep_last
-qos_overrides./parameter_events.publisher.reliability: reliable
+qos_overrides./parameter_events.publisher.reliability: best_effort
 role: video
 use_sim_time: false
 width: 1920
