--- a/src/rds_launchers/config/rear_cam_params.yaml
+++ b/src/rds_launchers/config/rear_cam_params.yaml
@@ -10,7 +10,7 @@ rear_camera_node:
     format: MJPEG
     height: 1080
     qos_overrides./parameter_events.publisher.depth: 10
-    qos_overrides./parameter_events.publisher.durability: best_effort
+    qos_overrides./parameter_events.publisher.durability: volatile
     qos_overrides./parameter_events.publisher.history: keep_last
     qos_overrides./parameter_events.publisher.reliability: best_effort
     role: video
