--- a/src/rds_launchers/config/front_cam_params.yaml
+++ b/src/rds_launchers/config/front_cam_params.yaml
@@ -4,7 +4,7 @@ front_camera_node:
     AnalogueGain: 1.0
     Brightness: 0.0
     Contrast: 1.0
-    ExposureTime: 15700
+    #ExposureTime: 15700
     Saturation: 1.0
     camera: \_SB_.PCI0.XHC_.RHUB.HS01-1:1.0-4c4a:4a55
     format: MJPEG
