--- a/src/rds_launchers/config/front_cam_params.yaml
+++ b/src/rds_launchers/config/front_cam_params.yaml
@@ -6,7 +6,7 @@ front_camera_node:
     Contrast: 1.0
     #ExposureTime: 15700
     Saturation: 1.0
-    camera: \_SB_.PCI0.XHC_.RHUB.HS01-1:1.0-4c4a:4a55
+    camera: \_SB_.PCI0.XHC_.RHUB.HS01-1:1.0-090c:337b
     format: MJPEG
     height: 1080
     qos_overrides./parameter_events.publisher.depth: 1
@@ -16,3 +16,8 @@ front_camera_node:
     role: video
     use_sim_time: false
     width: 1920
+
+
+    #1.0-090c:337b new usb cams
+    #1.0-4c4a:4a55 old usb cams
+    #1.0-05a3:9230 rover cam
