--- a/src/rds_launchers/config/front_cam_params.yaml
+++ b/src/rds_launchers/config/front_cam_params.yaml
@@ -6,7 +6,7 @@ front_camera_node:
     Contrast: 1.0
     ExposureTime: 15700
     Saturation: 1.0
-    camera: \_SB_.PCI0.XHC_.RHUB.HS01-1:1.0-090c:337b
+    camera: \_SB_.PCI0.XHC_.RHUB.HS01-1:1.0-4c4a:4a55
     format: MJPEG
     height: 240
     qos_overrides./parameter_events.publisher.depth: 1
