--- a/src/rds_launchers/config/rear_cam_params_v4l2.yaml
+++ b/src/rds_launchers/config/rear_cam_params_v4l2.yaml
@@ -1,9 +1,9 @@
 rear_camera_node:
   ros__parameters:
-    video_device: "/dev/video1"  # Path to the video device
-    pixel_format: "mjpeg"        # Pixel format (e.g., 'yuyv', 'mjpeg', etc.)
-    camera_frame_id: "camera_link"  # TF frame ID for the camera
-    camera_name: "my_camera"     # Name of the camera, used for naming topics
+    video_device: /dev/video1  # Path to the video device
+    pixel_format: mjpeg        # Pixel format (e.g., 'yuyv', 'mjpeg', etc.)
+    camera_frame_id: camera_link  # TF frame ID for the camera
+    camera_name: my_camera     # Name of the camera, used for naming topics
     image_width: 1920            # Width of the image frame
     image_height: 1080           # Height of the image frame
     framerate: 30                # Desired framerate (frames per second)
