--- a/src/rds_launchers/config/front_cam_params_v4l2.yaml
+++ b/src/rds_launchers/config/front_cam_params_v4l2.yaml
@@ -1,7 +1,7 @@
 front_camera_node:
   ros__parameters:
     video_device: /dev/video0  # Path to the video device
-    pixel_format: mjpeg        # Pixel format (e.g., 'yuyv', 'mjpeg', etc.)
+    pixel_format: MPEG        # Pixel format (e.g., 'yuyv', 'mjpeg', etc.)
     camera_frame_id: camera_link  # TF frame ID for the camera
     camera_name: my_camera     # Name of the camera, used for naming topics
     image_width: 1920            # Width of the image frame
