--- a/src/rds_launchers/config/front_cam_params_camros.yaml
+++ b/src/rds_launchers/config/front_cam_params_camros.yaml
@@ -10,7 +10,7 @@ front_camera_node:
     format: YUYV
     height: 720
     qos_overrides./parameter_events.publisher.depth: 10
-    qos_overrides./parameter_events.publisher.durability: volatile
+    qos_overrides./parameter_events.publisher.durability: transient_local
     qos_overrides./parameter_events.publisher.history: keep_last
     qos_overrides./parameter_events.publisher.reliability: best_effort
     role: video
