--- a/src/rds_launchers/config/rear_cam_params.yaml
+++ b/src/rds_launchers/config/rear_cam_params.yaml
@@ -9,8 +9,8 @@ rear_camera_node:
     camera: \_SB_.PCI0.XHC_.RHUB.HS01-1:1.0-090c:337b
     format: YUYV
     height: 240
-    qos_overrides./parameter_events.publisher.depth: 5
-    qos_overrides./parameter_events.publisher.durability: transient_local
+    qos_overrides./parameter_events.publisher.depth: 1000
+    qos_overrides./parameter_events.publisher.durability: volatile
     qos_overrides./parameter_events.publisher.history: keep_last
     qos_overrides./parameter_events.publisher.reliability: best_effort
     role: video
