--- a/src/rds_launchers/config/front_cam_params_camros.yaml
+++ b/src/rds_launchers/config/front_cam_params_camros.yaml
@@ -1,6 +1,5 @@
 front_camera_node:
   ros__parameters:
-    output_encoding: yuv422
     AeEnable: false
     AnalogueGain: 1.0
     Brightness: 0.0
@@ -13,7 +12,7 @@ front_camera_node:
     qos_overrides./parameter_events.publisher.depth: 1000
     qos_overrides./parameter_events.publisher.durability: volatile
     qos_overrides./parameter_events.publisher.history: keep_last
-    qos_overrides./parameter_events.publisher.reliability: best_effort
+    qos_overrides./parameter_events.publisher.reliability: reliable
     role: video
     use_sim_time: false
     width: 1280
