--- a/src/rds_launchers/config/rear_cam_params.yaml
+++ b/src/rds_launchers/config/rear_cam_params.yaml
@@ -12,7 +12,7 @@ rear_camera_node:
     qos_overrides./parameter_events.publisher.depth: 1000
     qos_overrides./parameter_events.publisher.durability: volatile
     qos_overrides./parameter_events.publisher.history: keep_last
-    qos_overrides./parameter_events.publisher.reliability: best_effort
+    qos_overrides./parameter_events.publisher.reliability: reliable
     role: video
     use_sim_time: false
     width: 320
