--- a/src/rds_launchers/config/rear_cam_params.yaml
+++ b/src/rds_launchers/config/rear_cam_params.yaml
@@ -1,10 +1,10 @@
 rear_camera_node:
   ros__parameters:
-    AeEnable: false
+    AeEnable: true
     AnalogueGain: 1.0
     Brightness: 0.0
     Contrast: 1.0
-    ExposureTime: 15700
+    # ExposureTime: 15700
     Saturation: 1.0
     camera: \_SB_.PCI0.XHC_.RHUB.HS01-1:1.0-090c:337b
     format: MJPEG
